<resources>
    <string name="app_name">Quizz App</string>
    <string name="login_title">Chào mừng\nbạn quay trở lại!</string>
    <string name="email_hint">Email của bạn</string>
    <string name="password_hint">Mật khẩu của bạn</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="login_button">Đăng nhập</string>
    <string name="or_login_with">Hoặc đăng nhập với</string>
    <string name="no_account">Chưa có tài khoản? </string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="register_title">Xin chào! Hãy đăng ký\nđể trải nghiệm ngay.</string>
    <string name="display_name_hint">Tên hiển thị của bạn</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="register_button">Đăng ký</string>
    <string name="already_have_account">Đã có tài khoản? </string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="forgot_password_title">Quên mật khẩu?</string>
    <string name="forgot_password_subtitle">Đừng lo! Hãy nhập email của bạn để\nkhôi phục mật khẩu.</string>
    <string name="recovery_email_hint">Email khôi phục của bạn</string>
    <string name="send_otp_button">Gửi mã OTP</string>
    <string name="remember_password">Đã nhớ mật khẩu? </string>

    <!-- OTP Verify -->
    <string name="otp_title">Xác nhận OTP</string>
    <string name="otp_subtitle">Hãy nhập mã OTP chúng tôi vừa gửi qua emaill của bạn.</string>
    <string name="otp_button">Xác nhận</string>
    <string name="otp_not_received">Chưa nhận mã OTP? </string>
    <string name="otp_resend">Gửi lại</string>

    <!-- Reset Password -->
    <string name="reset_password_title">Đặt mật khẩu mới</string>
    <string name="reset_password_subtitle">Mật khẩu mới của bạn phải khác hoàn toàn với mật khẩu đã dùng.</string>
    <string name="new_password_hint">Mật khẩu mới</string>
    <string name="confirm_new_password_hint">Xác nhận mật khẩu mới</string>
    <string name="create_password_button">Tạo mật khẩu</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">1691375582370697</string>
    <string name="fb_login_protocol_scheme">fb1691375582370697</string>
    <string name="facebook_client_token">33419bc76667af451728d73066898a5d</string>

    <!-- Home -->
    <string name="greeting">Xin chào 👋</string>
    <string name="suggested_for_you">Gợi ý cho bạn</string>

    <!-- Menu -->
    <string name="menu_title">Tùy chỉnh</string>
    <string name="menu_profile">Xem hồ sơ</string>
    <string name="menu_language">Ngôn ngữ</string>
    <string name="menu_dark_mode">Chế độ tối</string>
    <string name="menu_logout">Đăng xuất </string>

    <!-- Language Setting -->
    <string name="language_setting_title">Hãy chọn ngôn ngữ bạn thích</string>
    <string name="language_vietnamese">Tiếng Việt</string>
    <string name="language_english">English</string>
</resources>